[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "django-storage-thumbnails"
version = "0.1.0"
description = "Automatic image thumbnail generation for Django storages (local & S3)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [{name = "Ayesha Waris"}]
keywords = ["django", "storage", "thumbnail", "image", "s3", "django-storages"]
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Django>=3.2",
  "Pillow>=9.0",
]

[project.optional-dependencies]
s3 = ["django-storages[s3]>=1.14"]
celery = ["celery>=5.0"]
test = ["pytest", "pytest-django", "django-storages[s3]>=1.14", "moto[s3]", "celery>=5.0"]

[project.urls]
Homepage = "https://github.com/ayesha-waris/django-storage-thumbnails"

[tool.setuptools]
packages = ["thumbnail_storage"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
