[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "django-storage-thumbnails"
version = "0.1.0"
description = "Automatic image thumbnail generation for Django storages (local & S3)."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [{name = "Ayesha Waris"}]
keywords = ["django", "storage", "thumbnail", "image", "s3", "django-storages"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Django>=3.2",
  "Pillow>=9.0",
]

[project.optional-dependencies]
s3 = ["django-storages[s3]>=1.14"]
celery = ["celery>=5.0"]
test = ["pytest", "pytest-django", "django-storages[s3]>=1.14", "moto[s3]", "celery>=5.0"]

[project.urls]
Homepage = "https://github.com/ayesha-waris/django-storage-thumbnails"
Repository = "https://github.com/ayesha-waris/django-storage-thumbnails"
Issues = "https://github.com/ayesha-waris/django-storage-thumbnails/issues"

[tool.setuptools]
packages = ["thumbnail_storage"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
pythonpath = ["."]
